# xtensor-rbf

./: CMakeLists.txt  Makefile  bench_on_arm.sh  impl_dist.cpp  impl_thin_plate.cpp  rbf-py.ipynb  rbf.cpp  rbf.md  rbf_eig.cpp  rbf_eig.h  rbf_eig_main.cpp  rbf_xt.cpp  rbf_xt.h  rbf_xt_main.cpp  readme.md  run_on_arm.sh  valid_on_arm.sh  xtrbf.cpp.back
data/: p0.npy  p1.npy  py-get-w  py-input-x  py-input-y  py-input-z
perf_step/: cdit_aa.cc  impl_dist.cpp
perf_step/perf_cdist/: cdist.h  cdist_eigen.cc  cdist_forloop.cc  cdist_gemm_b.cc  cdist_gemm_bu.cc  cdist_gemm_bup.cc  cdist_gemm_bupn.cc  main_cdist_bench.cc  main_cdist_valid.cc  n2_cdist.cc  util.cc  util.h
perf_step/perf_log/: Makefile  a.out  acl_double.h  acl_log.h  cp.py  demo.cc  impl_log.cpp  log_double.cpp  log_step.cc  log_vary.cpp  run.sh  s.txt  test.cc
rbf_float/: rbf.cpp  rbf.h
rbf_v1/: CMakeLists.txt  rbf_eig.cpp  rbf_eig.h  rbf_eig_main.cpp  rbf_fei.cpp  rbf_fei.h  rbf_fei_main.cpp  rbf_xt_main.cpp
rbf_v2/: note.md
